<resources>
    <string name="app_name">בשכונה</string>
    <string name="hint_email">מייל</string>
    <string name="hint_password">סיסמה</string>
    <string name="you_can_also_etc">אפשר להתחבר דרך:</string>
    <string name="label_LoginFragment">LoginFragment</string>
    <string name="continue_button">המשך</string>
    <string name="app_description">עבודה מזדמנת סביבך</string>
    <string name="to_sign_up"><u>פתיחת חשבון חדש</u></string>
    <string name="to_login"><u>להתחבר לחשבון קיים</u></string>
    <string name="must_be_valid_email">נע להקליד כתובת מייל עם ׳@׳</string>
    <string name="must_be_valid_password">סיסמה צריך להיות יותר מ5 תבים</string>
    <string name="homeActivity">homeActivity</string>
    <string name="error_msg_fill_fields">הפרטים לא קלטו במערכת</string>

    <string name="menu_charts">דוחות</string>
    <string name="menu_chats">שיחות</string>
    <string name="menu_work">עבודות</string>
    <string name="menu_notification">עדכונים</string>
    <string name="user_profile">user profile</string>
    <string name="your_web_client_id">169260010374-e3q9b9d30etcrbnfckc36e6l9h3pdqth.apps.googleusercontent.com</string>
    <string name="label_AuthNewUserDetailsFragment">AuthNewUserDetails</string>
    <string name="sign_up">הרשמה</string>
    <string name="name">שם</string>
    <string name="gender">מין</string>
    <string name="man">זכר</string>
    <string name="woman">נקבה</string>
    <string name="age">גיל</string>
    <string name="employer">מעביד</string>
    <string name="worker">עובד</string>
    <string name="iamaworker">אני עובד</string>
    <string name="what_is_your_role">האם אתה עובד או מעביד?</string>
    <string name="choose_work">באיזה תחום אתם מחפשים לעבוד?</string>
    <string name="choose_hire_for">באיזה תחום אתם מחפשים עזרה?</string>
    <string name="tell_us_about_you">תספר לכולם טיפה על עצמך</string>
    <string name="write_in_heb">תקלידו בעברית</string>
    <string name="overview">סיכום חודשי</string>
    <string name="current_booked_jobs">עבודות בקרוב</string>
    <string name="earnings_this_month">הכנסות החודש</string>
    <string name="jobs_completed_this_month">עבודות שסיימת</string>
    <string name="current_rating">דירוג כללי</string>
    <string name="choose_role">איך תרצו לראות את האפליקציה?</string>
    <string name="choose_role_msg">מופיע לנו שיש לכם גם חשבון עובד וגם חשבון מעביד. לאיזה חשבון ברצונכם להתחבר כרגע? (אפשר לעבור ביניהם בקלות)</string>
    <string name="extended_fab_label">יצירת פרויקט</string>
    <string name="upcoming_projects">פרויקטים בקרוב</string>
    <string name="finished_projects">פרויקטים שסיימת</string>
    <string name="job_type">סוג עבודה</string>
    <string name="let_us_know_more">תן לאחרים לדעת עוד על העבודה…</string>
    <string name="description">תיאור</string>
    <string name="date">תאריך</string>
    <string name="start_time">מהשעה</string>
    <string name="endTime_field">עד השעה</string>
    <string name="more_details">עוד פרטים</string>
    <string name="payment">תשלום</string>
    <string name="payment_per_worker">שכר לעובד (בשקלים)</string>
    <string name="submit">סיום</string>
    <string name="creating_project">מייצר פרויקט חדש…</string>
    <string name="created_project">פרויקט מיוצר בהצלחה והוסף לפרויקטים שלך</string>
    <string name="choose_date">בחירת תאריך</string>
    <string name="date_before_time">נא לבחור תאריך</string>
    <string name="fill_all_fields">חסר פרטים</string>
    <string name="info_not_suitable">המידע לא מתאימה למה שכבר מלאית</string>
    <string name="description_not_filled">נא לכתוב הסבר על הפרוייקט</string>
    <string name="payment_not_filled">מינימום 50 ש׳׳ח שכר לעובד</string>
    <string name="missing_details">חסר פרטים</string>
    <string name="cash">מזומן</string>
    <string name="bit">ביט</string>
    <string name="paybox">פייבוקס</string>
    <string name="location_long_press">תסמנו את מיקום העבודה בלחיצה ארוכה במפה.</string>
    <string name="show_only_to_workers">(כדי לשמור על המידע הפרטית שלכם אנחנו נראה את מיקום הפרוייקט רק לעובדים שיתקבלו לעבודה זו)</string>
    <string name="search_address_hint">כתובת, מספר בית, וכו׳</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_schedule">לוז</string>
    <string name="payment_preferences">אמצעי תשלום</string>
    <string name="hours">שעות</string>
    <string name="kilometerAbr">ק׳׳מ</string>
</resources>