<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:alpha="0.8"
        android:fontFamily="@font/varela_round"
        android:text="@string/more_details"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_field"
        style="@style/Theme.Baschuna.FilledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        android:hint="@string/date"
        app:boxBackgroundColor="@color/background_light_primary"
        app:startIconDrawable="@drawable/ic_date">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/startTime_field"
        style="@style/Theme.Baschuna.FilledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        android:gravity="center"
        android:hint="@string/start_time"
        app:startIconDrawable="@drawable/ic_clock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/endTime_field"
        style="@style/Theme.Baschuna.FilledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        android:gravity="center"
        android:hint="@string/endTime_field"
        app:startIconDrawable="@drawable/ic_clock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
