<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="40dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/what_is_your_role"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/worker_option"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:alpha="0.6"
            android:src="@drawable/syt_worker"
            app:civ_border_color="@color/color_accent"
            app:civ_border_width="20dp"
            app:civ_circle_background_color="@color/color_accent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/employer_option"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:alpha="0.6"
            android:src="@drawable/syt_employer"
            app:civ_border_color="@color/color_accent"
            app:civ_border_width="20dp"
            app:civ_circle_background_color="@color/color_accent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/secular_one"
            android:gravity="center"
            android:text="@string/worker"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/secular_one"
            android:gravity="center"
            android:text="@string/employer"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>