<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_horizontal"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".ui.fragments.auth.LoginFragment">

    <LinearLayout
        android:id="@+id/header_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_bashcuna_splash_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/secular_one"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/dark_text"
            android:textSize="26sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_LL"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/varela_round"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/app_description"
        android:textColor="@color/primary_text_on_light"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/secular_one"
            android:text="@string/hint_email"
            android:textColor="@color/dark_text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/varela_round"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/dark_text"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/secular_one"
            android:text="@string/hint_password"
            android:textColor="@color/dark_text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/varela_round"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/dark_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/color_accent"
            android:fontFamily="@font/secular_one"
            android:text="@string/continue_button"
            android:textColor="@color/light_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/varela_round"
            android:gravity="center"
            android:text="@string/you_can_also_etc"
            android:textColor="@color/dark_text_secondary"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/googleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_edittext">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:contentDescription="google log-in icon"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:src="@drawable/google" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/facebookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_edittext"
                    android:foregroundGravity="center">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:contentDescription="facebook log-in icon"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:src="@drawable/facebook" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>