<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.Baschuna.FilledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        android:gravity="center"
        android:hint="@string/payment_per_worker"
        app:startIconDrawable="@drawable/ic_money">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/payment_amount_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:inputType="number"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:foregroundGravity="center_vertical"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.8"
                android:background="@drawable/custom_plus_button"
                android:src="@drawable/ic_minus" />

            <TextView
                android:id="@+id/num_people_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="number"
                android:text="0"
                android:textSize="16sp"
                tools:ignore="HardcodedText,TextViewEdits" />

            <ImageButton
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:background="@drawable/custom_plus_button"
                android:src="@drawable/ic_plus"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/ic_person"
            android:fontFamily="@font/secular_one"
            android:text="x"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/ic_person"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_person"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/paymentChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:chipSpacingHorizontal="30dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_bit"
            style="@style/Theme.Bashcuna.MaterialChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bit"
            app:closeIcon="@drawable/ic_bit" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cash"
            style="@style/Theme.Bashcuna.MaterialChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cash"
            app:closeIcon="@drawable/ic_money" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_paybox"
            style="@style/Theme.Bashcuna.MaterialChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/paybox"
            app:closeIcon="@drawable/ic_paybox" />

    </com.google.android.material.chip.ChipGroup>


</LinearLayout>